Done With Placing & Receiving Orders

--- a/views/customer_home.ejs
+++ b/views/customer_home.ejs
@@ -29,6 +29,9 @@
                                     <input type="hidden" name="pid" id="pid" for="pid" value='<%=products[i].price%>'>
                                 </div>
                                 <div>
+                                    <input type="hidden" name="mid" id="mid" for="mid" value='<%=products[i].mid%>'>
+                                </div>
+                                <div>
                                     <input type="number" name="quantity" id="quantity" for="quantity">
                                 </div>
                                 <div>
