--- a/views/medicalstore_home.ejs
+++ b/views/medicalstore_home.ejs
@@ -27,6 +27,35 @@
             </div>
             <div class="orders">
                 <h1>ALL ORDERS</h1>
+                <ul>
+                    <% for (var i = 0; i < orders.length; i++) { %>
+                        <li class="timeline-yellow">
+                            <div class="timeline-time">
+                                <span>
+                                    OrderID: <%= orders[i].oid %>
+                                </span> <br>
+                                <span class="cname">
+                                    Customer: <%= orders[i].username %>
+                                </span> <br>
+                                <span class="status">
+                                    Status: <%= orders[i].status %>
+                                </span> <br>
+                                <span class="address">
+                                    Address: <%= orders[i].address %>
+                                </span> <br>
+                                <span class="zipcode">
+                                    Zipcode: <%= orders[i].zipcode %>
+                                </span> <br>
+                                <span class="contact">
+                                    Contact: <%= orders[i].contact %>
+                                </span> <br>
+                                <span class="order">
+                                    Order Date: <%= Date(orders[i].date) %>
+                                </span> <br>
+                            </div>
+                        </li>
+                        <% } %>
+                </ul>
             </div>
         </div>
         <div class="operations">
