--- a/views/customer_cart.ejs
+++ b/views/customer_cart.ejs
@@ -20,7 +20,7 @@
             </ul>
         </div>
         <div>
-            <h5><a href="/order">Place Order</a></h5>
+            <h5><a href="/order/user">Place Order</a></h5>
         </div>
     </body>
 </html>
